--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^4.14.0",
+    "@aws-sdk/client-s3": "^3.971.0",
+    "@aws-sdk/s3-request-presigner": "^3.971.0",
+    "@google/genai": "^1.37.0",
+    "gumloop": "^1.0.2",
+    "mongodb": "^7.0.0",
     "next": "15.5.9",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react": "^19.1.2",
+    "react-dom": "^19.1.2",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
