--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-s3": "^3.971.0",
     "@aws-sdk/s3-request-presigner": "^3.971.0",
     "@google/genai": "^1.37.0",
+    "fuse.js": "^7.1.0",
     "gumloop": "^1.0.2",
     "mongodb": "^7.0.0",
     "next": "15.5.9",
